--- a/html/index.html
+++ b/html/index.html
@@ -18,12 +18,17 @@
    <h1>Рецепты от Тикерона</h1>
   </div>
 	<div id="menu">
+<div><id="image">
+	<img width="220" height="291" src="./menu.jpg">
+	</div>
+   <div class="line"></div>
    <div><a href="index.html">ТУШЕНОЙ СВИНИНЫ</a></div>
    <div><a href="2.html">СТЕЙК</a></div>
    <div><a href="3.html">ТУШЕНАЯ КУРИЦА</a></div>
-   <div class="line"></div>
    <div><a href="4.html">ЗАПЕЧЕННЫЕ БАКЛАЖАНЫ</a></div>
    <div><a href="5.html">ШАШЛЫК</a></div>
+   <div class="line"></div>
+
   </div>
   	<div id="content">
    <h2>РЕЦЕПТЫ ТУШЕНОЙ СВИНИНЫ </h2>
@@ -41,4 +46,17 @@
   </div>
 
 </body>
+<foot id="foot">
+<div id="image">
+<img width="400" height="221" src="./foot.jpg">
+
+ <p id="footcontent">"КНИГА О ВКУСНОЙ И ЗДОРОВОЙ ПИЩЕ" СССР 1952 - 1964г.
+По указанию тов. А. И. Микояна редакция газеты «Пищевая индустрия» выпускает «Книгу о вкусной   и здоровой пище» — первую в Советском Союзе большую поваренную книгу, рассчитанную на самые широкие слои населения, с его собственным предисловием, в котором нарком пищевой промышленности призвал народ к социалистическому изобилию.
+Изданная в 1952 году «Книга о вкусной и здоровой пище» тиражом 500 тысяч экземпляров распродана в короткий срок.
+
+Главная задача «Книги о вкусной и здоровой пище» состоит в том, чтобы помочь домашней хозяйке, при наименьшей затрате труда и времени, приготовить для семьи вкусную и здоровую пищу, используя для этого разнообразный и богатый ассортимент пищевых продуктов и полуфабрикатов, вырабатываемых промышленностью продовольственных товаров.
+В книге рассказано об основах рационального питания, изложены необходимые краткие сведения о пищевых товарах и приведены рецепты различных блюд, составленные опытными кулинарами.
+Книга рассмотрена и одобрена Институтом питания Академии медицинских наук Союза ССР </p>
+</div>
+</foot> 
 </html>
