add footer to all pages and fix menu

--- a/html/2.html
+++ b/html/2.html
@@ -19,12 +19,14 @@
   </div>
 
     <div id="menu">
-   <div><a href="index.html">ТУШЕНОЙ СВИНИНЫ</a></div>
-   <div><a href="2.html">СТЕЙК</a></div>
-   <div><a href="3.html">ТУШЕНАЯ КУРИЦА</a></div>
-   <div class="line"></div>
-   <div><a href="4.html">ЗАПЕЧЕННЫЕ БАКЛАЖАНЫ</a></div>
-   <div><a href="5.html">ШАШЛЫК</a></div>
+        <div id="image"> 	<img alt="menu" width="220" height="291" src="./menu.jpg"> 	</div>
+        <div class="line"></div>
+        <div> <a href="index.html">ТУШЕНОЙ СВИНИНЫ</a></div>
+        <div> <a href="2.html">СТЕЙК</a></div>
+        <div> <a href="3.html">ТУШЕНАЯ КУРИЦА</a></div>
+        <div> <a href="4.html">ЗАПЕЧЕННЫЕ БАКЛАЖАНЫ</a></div>
+        <div> <a href="5.html">ШАШЛЫК</a></div>
+        <div class="line"></div>
   </div>
   	
 <div id="content">
@@ -40,5 +42,22 @@
 	<p>Как приготовить стейк? Для приготовления стейков используется, как правило, лучшие части говяжьей туши, однако сейчас нередко можно встретить стейк из свинины или даже стейк из семги или другой рыбы. Мясо нарезается вдоль волокон и обжаривается на раскаленной поверхности, чтобы стейк немного прихватился и не терял сок. Далее мясо доводится до готовности при меньшей температуре на сковороде или с помощью духового шкафа. Стейк в духовке всегда будет хорошо и равномерно прожаренным, такой запеченный стейк ничем не уступит жаренному на сковороде. В качестве гарнира к стейку хорошо подойдут овощи и ягодный соус.</p>
    
   </div>
+  
+  <div  id="footer">
+        <div id="image_footer">
+            <img alt="foot" width="400" height="221" src="./foot.jpg">
+        </div>
+        <div id="footer_content">
+                <p>
+                    "КНИГА О ВКУСНОЙ И ЗДОРОВОЙ ПИЩЕ" СССР 1952 - 1964г.
+                    По указанию тов. А. И. Микояна редакция газеты «Пищевая индустрия» выпускает «Книгу о вкусной   и здоровой пище» — первую в Советском Союзе большую поваренную книгу, рассчитанную на самые широкие слои населения, с его собственным предисловием, в котором нарком пищевой промышленности призвал народ к социалистическому изобилию.
+                    Изданная в 1952 году «Книга о вкусной и здоровой пище» тиражом 500 тысяч экземпляров распродана в короткий срок.
+
+                    Главная задача «Книги о вкусной и здоровой пище» состоит в том, чтобы помочь домашней хозяйке, при наименьшей затрате труда и времени, приготовить для семьи вкусную и здоровую пищу, используя для этого разнообразный и богатый ассортимент пищевых продуктов и полуфабрикатов, вырабатываемых промышленностью продовольственных товаров.
+                    В книге рассказано об основах рационального питания, изложены необходимые краткие сведения о пищевых товарах и приведены рецепты различных блюд, составленные опытными кулинарами.
+                    Книга рассмотрена и одобрена Институтом питания Академии медицинских наук Союза ССР
+                </p>
+        </div>
+    </div>
 </body>
 </html>
