--- a/html/4.html
+++ b/html/4.html
@@ -19,12 +19,14 @@
   </div> 
 
 <div id="menu">
-   <div><a href="index.html">ТУШЕНОЙ СВИНИНЫ</a></div>
-   <div><a href="2.html">СТЕЙК</a></div>
-   <div><a href="3.html">ТУШЕНАЯ КУРИЦА</a></div>
-   <div class="line"></div>
-   <div><a href="4.html">ЗАПЕЧЕННЫЕ БАКЛАЖАНЫ</a></div>
-   <div><a href="5.html">ШАШЛЫК</a></div>
+        <div id="image"> 	<img alt="menu" width="220" height="291" src="./menu.jpg"> 	</div>
+        <div class="line"></div>
+        <div> <a href="index.html">ТУШЕНОЙ СВИНИНЫ</a></div>
+        <div> <a href="2.html">СТЕЙК</a></div>
+        <div> <a href="3.html">ТУШЕНАЯ КУРИЦА</a></div>
+        <div> <a href="4.html">ЗАПЕЧЕННЫЕ БАКЛАЖАНЫ</a></div>
+        <div> <a href="5.html">ШАШЛЫК</a></div>
+        <div class="line"></div>
   </div>
   	
 <div id="content">
@@ -41,5 +43,21 @@
    <p>Как приготовить запеченные баклажаны? Запекать баклажаны можно несколькими способами - для икры, овощ запекается в целом виде, можно порезать его на небольшие ломтики и смазать маслом, тогда они будут иметь золотистый цвет. Запеченные кусочки отлично подойдут для мусаки, либо рецепта «синих» под пармезаном. Кроме того, баклажан можно сделать фаршированным с тунцом, грибами, мясом, либо добавить вина, томат, чеснок, сыр. Блюда из баклажана относят к холодным закускам, которые хорошо подойдут, как к обычному, так и праздничному столу. Рецепты запеченных баклажанов настолько разнообразны, что их можно подавать на стол каждый раз в новом виде.</p>
    
   </div>
+      <div  id="footer">
+        <div id="image_footer">
+            <img alt="foot" width="400" height="221" src="./foot.jpg">
+        </div>
+        <div id="footer_content">
+                <p>
+                    "КНИГА О ВКУСНОЙ И ЗДОРОВОЙ ПИЩЕ" СССР 1952 - 1964г.
+                    По указанию тов. А. И. Микояна редакция газеты «Пищевая индустрия» выпускает «Книгу о вкусной   и здоровой пище» — первую в Советском Союзе большую поваренную книгу, рассчитанную на самые широкие слои населения, с его собственным предисловием, в котором нарком пищевой промышленности призвал народ к социалистическому изобилию.
+                    Изданная в 1952 году «Книга о вкусной и здоровой пище» тиражом 500 тысяч экземпляров распродана в короткий срок.
+
+                    Главная задача «Книги о вкусной и здоровой пище» состоит в том, чтобы помочь домашней хозяйке, при наименьшей затрате труда и времени, приготовить для семьи вкусную и здоровую пищу, используя для этого разнообразный и богатый ассортимент пищевых продуктов и полуфабрикатов, вырабатываемых промышленностью продовольственных товаров.
+                    В книге рассказано об основах рационального питания, изложены необходимые краткие сведения о пищевых товарах и приведены рецепты различных блюд, составленные опытными кулинарами.
+                    Книга рассмотрена и одобрена Институтом питания Академии медицинских наук Союза ССР
+                </p>
+        </div>
+    </div>
 </body>
 </html>
