--- a/html/index.html
+++ b/html/index.html
@@ -14,49 +14,51 @@
 
 <body>
 
- 	  <div id="head">
-   <h1>Рецепты от Тикерона</h1>
-  </div>
-	<div id="menu">
-<div><id="image">
-	<img width="220" height="291" src="./menu.jpg">
-	</div>
-   <div class="line"></div>
-   <div><a href="index.html">ТУШЕНОЙ СВИНИНЫ</a></div>
-   <div><a href="2.html">СТЕЙК</a></div>
-   <div><a href="3.html">ТУШЕНАЯ КУРИЦА</a></div>
-   <div><a href="4.html">ЗАПЕЧЕННЫЕ БАКЛАЖАНЫ</a></div>
-   <div><a href="5.html">ШАШЛЫК</a></div>
-   <div class="line"></div>
+    <div id="head">
+        <h1>Рецепты от Тикерона</h1>
+    </div>
+    <div id="menu">
+        <div id="image"> 	<img alt="menu" width="220" height="291" src="./menu.jpg"> 	</div>
+        <div class="line"></div>
+        <div> <a href="index.html">ТУШЕНОЙ СВИНИНЫ</a></div>
+        <div> <a href="2.html">СТЕЙК</a></div>
+        <div> <a href="3.html">ТУШЕНАЯ КУРИЦА</a></div>
+        <div> <a href="4.html">ЗАПЕЧЕННЫЕ БАКЛАЖАНЫ</a></div>
+        <div> <a href="5.html">ШАШЛЫК</a></div>
+        <div class="line"></div>
 
-  </div>
-  	<div id="content">
-   <h2>РЕЦЕПТЫ ТУШЕНОЙ СВИНИНЫ </h2>
-   	<div><id="image">
-	<img width="300" height="255" src="./svin.jpg">
-	</div>
-   <p><pb>Тушеная свинина считается традиционным блюдом во многих кухнях мира.</pb> Рецепты приготовления тушеной свинины крайне разнообразны, ее готовят с различными овощами, специями и соусами. Кроме того, многие любители постоянных диет используют рецепты с этим мясом, для того, чтобы похудеть.</p>
-   		
-		<a class="link" href="./2.html"> 
-<p>Читайте так же как приготовить "СТЕЙК" </p>
-</a>
-		
-   <p>Как приготовить тушеную свинину? Отлично получается тушеная свинина с картофелем в горшочках. Особого ума здесь не нужно, только мясо, лук, картофель и специальные специи. Многие предпочитают готовить бигус - это такое вкусное блюдо из тушеной свинины с капустой. Оно считается популярным во всей Европе. Для тушения свинины подходит любая ее часть, причем не только мякоть получается мягкой и ароматной, но и мясо на косточке. Обычно во время приготовления тушеной свинины не возникает трудностей, так как выделяемый ею жир и сок может заменить не удавшийся соус. В качестве заправки можно использовать любое вино, пиво и апельсиновый сок. Прежде чем приготовить тушеную свинину, ее обрабатывают и даже маринуют в винном соусе или в разных травах, несколько часов. Мясо свинины можно тушить в кастрюле, утятнице, сковороде, глиняных горшках и даже в стеклянной посуде.</p>
-   
-  </div>
+    </div>
+    <div id="content">
+        <h2>РЕЦЕПТЫ ТУШЕНОЙ СВИНИНЫ </h2>
+        <div id="image2">
+            <img alt="svin" width="300" height="255" src="./svin.jpg">
+        </div>
+        <pb>Тушеная свинина считается традиционным блюдом во многих кухнях мира.</pb> <p>Рецепты приготовления тушеной свинины крайне разнообразны, ее готовят с различными овощами, специями и соусами. Кроме того, многие любители постоянных диет используют рецепты с этим мясом, для того, чтобы похудеть.</p>
 
+        <a class="link" href="./2.html">
+            <p>Читайте так же как приготовить "СТЕЙК" </p>
+        </a>
+
+        <p>Как приготовить тушеную свинину? Отлично получается тушеная свинина с картофелем в горшочках. Особого ума здесь не нужно, только мясо, лук, картофель и специальные специи. Многие предпочитают готовить бигус - это такое вкусное блюдо из тушеной свинины с капустой. Оно считается популярным во всей Европе. Для тушения свинины подходит любая ее часть, причем не только мякоть получается мягкой и ароматной, но и мясо на косточке. Обычно во время приготовления тушеной свинины не возникает трудностей, так как выделяемый ею жир и сок может заменить не удавшийся соус. В качестве заправки можно использовать любое вино, пиво и апельсиновый сок. Прежде чем приготовить тушеную свинину, ее обрабатывают и даже маринуют в винном соусе или в разных травах, несколько часов. Мясо свинины можно тушить в кастрюле, утятнице, сковороде, глиняных горшках и даже в стеклянной посуде.</p>
+
+    </div>
+
+
+    <div  id="footer">
+        <div id="image_footer">
+            <img alt="foot" width="400" height="221" src="./foot.jpg">
+        </div>
+        <div id="footer_content">
+                <p>
+                    "КНИГА О ВКУСНОЙ И ЗДОРОВОЙ ПИЩЕ" СССР 1952 - 1964г.
+                    По указанию тов. А. И. Микояна редакция газеты «Пищевая индустрия» выпускает «Книгу о вкусной   и здоровой пище» — первую в Советском Союзе большую поваренную книгу, рассчитанную на самые широкие слои населения, с его собственным предисловием, в котором нарком пищевой промышленности призвал народ к социалистическому изобилию.
+                    Изданная в 1952 году «Книга о вкусной и здоровой пище» тиражом 500 тысяч экземпляров распродана в короткий срок.
+
+                    Главная задача «Книги о вкусной и здоровой пище» состоит в том, чтобы помочь домашней хозяйке, при наименьшей затрате труда и времени, приготовить для семьи вкусную и здоровую пищу, используя для этого разнообразный и богатый ассортимент пищевых продуктов и полуфабрикатов, вырабатываемых промышленностью продовольственных товаров.
+                    В книге рассказано об основах рационального питания, изложены необходимые краткие сведения о пищевых товарах и приведены рецепты различных блюд, составленные опытными кулинарами.
+                    Книга рассмотрена и одобрена Институтом питания Академии медицинских наук Союза ССР
+                </p>
+        </div>
+    </div>
 </body>
-<foot id="foot">
-<div id="image">
-<img width="400" height="221" src="./foot.jpg">
-
- <p id="footcontent">"КНИГА О ВКУСНОЙ И ЗДОРОВОЙ ПИЩЕ" СССР 1952 - 1964г.
-По указанию тов. А. И. Микояна редакция газеты «Пищевая индустрия» выпускает «Книгу о вкусной   и здоровой пище» — первую в Советском Союзе большую поваренную книгу, рассчитанную на самые широкие слои населения, с его собственным предисловием, в котором нарком пищевой промышленности призвал народ к социалистическому изобилию.
-Изданная в 1952 году «Книга о вкусной и здоровой пище» тиражом 500 тысяч экземпляров распродана в короткий срок.
-
-Главная задача «Книги о вкусной и здоровой пище» состоит в том, чтобы помочь домашней хозяйке, при наименьшей затрате труда и времени, приготовить для семьи вкусную и здоровую пищу, используя для этого разнообразный и богатый ассортимент пищевых продуктов и полуфабрикатов, вырабатываемых промышленностью продовольственных товаров.
-В книге рассказано об основах рационального питания, изложены необходимые краткие сведения о пищевых товарах и приведены рецепты различных блюд, составленные опытными кулинарами.
-Книга рассмотрена и одобрена Институтом питания Академии медицинских наук Союза ССР </p>
-</div>
-</foot> 
 </html>
